<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                app:srcCompat="@android:drawable/ic_input_get"
                style="@style/title_image" />

            <TextView
                android:id="@+id/title"
                android:text="@string/title"
                app:fontFamily="@font/medievalsharp"
                style="@style/title" />

        </LinearLayout>

        <ImageView
            android:id="@+id/divider"
            app:srcCompat="?attr/dividerHorizontal"
            style="@style/divider" />

        <TextView
            android:id="@+id/q1"
            style="@style/question_style"
            android:text="@string/q1"
            app:fontFamily="casual" />

        <RadioGroup
            android:id="@+id/q1_radio"
            style="@style/answer_radio_group">

            <RadioButton
                android:id="@+id/q1_radio_opt1"
                android:text="@string/q1_opt1"
                style="@style/radio_opt" />

            <RadioButton
                android:id="@+id/q1_radio_opt2"
                style="@style/radio_opt"
                android:text="@string/q1_opt2" />

            <RadioButton
                android:id="@+id/q1_radio_opt3"
                style="@style/radio_opt"
                android:text="@string/q1_opt3" />

            <RadioButton
                android:id="@+id/q1_radio_opt4"
                style="@style/radio_opt"
                android:text="@string/q1_opt4" />

        </RadioGroup>

        <TextView
            android:id="@+id/q2"
            style="@style/question_style"
            android:text="@string/q2"
            app:fontFamily="casual" />

        <CheckBox
            android:id="@+id/q2_check_opt1"
            style="@style/check_opt"
            android:text="@string/q2_opt1" />

        <CheckBox
            android:id="@+id/q2_check_opt2"
            style="@style/check_opt"
            android:text="@string/q2_opt2" />

        <CheckBox
            android:id="@+id/q2_check_opt3"
            style="@style/check_opt"
            android:text="@string/q2_opt3" />

        <CheckBox
            android:id="@+id/q2_check_opt4"
            style="@style/check_opt"
            android:text="@string/q2_opt4" />

        <TextView
            android:id="@+id/q3"
            style="@style/question_style"
            android:text="@string/q3"
            app:fontFamily="casual" />

        <EditText
            android:id="@+id/q3edit"
            style="@style/edit_field" />

        <Button
            android:id="@+id/submit"
            android:text="@string/submit"
            app:fontFamily="@font/medievalsharp"
            style="@style/button" />

    </LinearLayout>
</ScrollView>